# dotpanel

./: .gitmodules  .uncrustify.cfg  .vale.ini  Cargo.toml  README.md  build.rs  flake.nix  meson.build
.vale/config/vocabularies/dotpanel/: accept.txt
nix/: devenv.nix  home-manager.nix  nixos.nix  package.nix  shell.nix
resources/: com.gitlab.xarvex.dotfyls.dotpanel.gresource.xml  meson.build  org.codeberg.xarvex.dotpanel.gresource.xml  resources.gresource.xml
resources/icons/: .ignore  meson.build
resources/scss/: _adw.scss  _bar.scss  _components.scss  _gtk.scss  bar.scss  main.scss  meson.build
resources/styles/: _menu.scss  main.scss
src/: app.rs  application.vala  main.rs  main.vala  meson.build
src/bar/: bar.vala  battery.vala  host.vala  main.blp  main.rs  meson.build  mod.rs  module.blp  module.rs  module.vala  power.vala  time.vala  workspace.vala
src/bar/workspace/: button.vala  meson.build  workspace.vala
src/menu/: input.vala  menu.vala  meson.build  module.vala  row.vala
src/menu/launcher/: launcher.vala  meson.build  row.vala
src/module/: mod.rs
src/module/host/: bar.blp  bar.rs  mod.rs
src/module/workspace/: bar.rs  button.blp  button.rs  mod.rs
